# SauceTool

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: cmake_uninstall.cmake.in
include/: Sauce.h  SauceTool.h
include/sauce/: SauceParser.h
src/: Sauce.c  SauceParser.c  SauceTool.c
test/: CMakeLists.txt
test/expect/: CommentButNoRecord.ans  InvalidComment.txt  LongNoSauce.ans  NoSauce.txt  NoSauceWithEOF.ans  OnlyRecord.ans  SauceButNoEOF.ans  ShortFile.ans  TestFile1.ans  TestFile2.ans  TestFile3.ans
test/expect/comment_remove/: RemoveComment.ans
test/expect/comment_write/: AddCommentAndEOFToRecord.ans  LongComment.ans  ReplaceCommentAndAddEOF.ans  ReplaceExistingComment.ans  SameCommentLength.ans  ShortComment.txt
test/expect/remove/: RemoveBoth.ans  RemoveInvalidComment.ans  RemoveOnlyRecord.ans
test/expect/write/: AppendExpect.ans  AppendWithEOFExpect.txt  ReplaceExpect.ans  WriteToEmptyExpect.ans
test/src/: CheckTest.c  CommentReadTest.c  CommentRemoveTest.c  CommentWriteTest.c  HelperFunctionTest.c  RecordReadTest.c  RecordRemoveTest.c  RecordWriteTest.c  TestRes.c  TestRes.h
